hphp/test/zend/good/ext/pcre/tests/bug52971.php.skipif
<?php if ((double)PCRE_VERSION < 8.1) die('skip PCRE_VERSION >= 8.1 is required!'); ?>