hphp/test/zend/bad/ext/spl/tests/spl_autoload_002.php.skipif
<?php 
if (spl_autoload_functions() !== false) die('skip __autoload() registered by php.ini'); 
?>